<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Workspace" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item android:title="@string/drawer_secondary_section" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/add_Task"
            android:icon="@drawable/baseline_update_24"
            android:title="@string/custom_tasks" />
        <item
            android:id="@+id/View_tasks"
            android:icon="@drawable/baseline_arrow_back_ios_24"
            android:title="@string/view_tasks"/>
    </group>
</menu>
