<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.taskmaster.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.taskmaster.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.taskmaster.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/add_Task"
        android:name="com.example.taskmaster.ui.Logout.AddTaskFragment"
        android:label="@string/custom_tasks"
        tools:layout="@layout/fragment_add_task"/>
    <fragment
        android:id="@+id/View_tasks"
        android:name="com.example.taskmaster.ui.Custom.ViewTaskFragment"
        android:label="@string/view_tasks"
        tools:layout="@layout/viewtaskfragment"/>
</navigation>